[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/debug/DebugEncounter.gd" type="Script" id=1]
[ext_resource path="res://scenes/ui/interface/dialogs/UiButtons.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/ui/interface/pkmnfl.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://scenes/characters/biomons/components/BiomonBigSprite.tscn" type="PackedScene" id=4]

[sub_resource type="DynamicFont" id=1]
size = 11
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 11
extra_spacing_bottom = 6
font_data = ExtResource( 3 )

[node name="DebugEncounter" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="SelectFile" parent="." instance=ExtResource( 2 )]
margin_left = 11.0
margin_top = 16.0
margin_right = 61.0
margin_bottom = 36.0
focus_neighbour_top = NodePath("../CalcNb")
focus_neighbour_bottom = NodePath("../CalcSingle")
focus_next = NodePath("../EdNumbers")
focus_previous = NodePath("../CalcNb")
text = "select"
id_button = "select"
text_button = "Select file"
first_button = true

[node name="CalcSingle" parent="." instance=ExtResource( 2 )]
margin_left = 11.0
margin_top = 81.0
margin_right = 61.0
margin_bottom = 101.0
focus_neighbour_top = NodePath("../SelectFile")
focus_neighbour_bottom = NodePath("../CalcNb")
focus_next = NodePath("../CalcNb")
focus_previous = NodePath("../EdRate")
text = "single"
id_button = "single"
text_button = "To 1st encounter"

[node name="CalcNb" parent="." instance=ExtResource( 2 )]
margin_left = 11.0
margin_top = 97.0
margin_right = 61.0
margin_bottom = 117.0
focus_neighbour_top = NodePath("../CalcSingle")
focus_neighbour_bottom = NodePath("../SelectFile")
focus_next = NodePath("../SelectFile")
focus_previous = NodePath("../CalcSingle")
text = "nb"
id_button = "nb"
text_button = "Calc encounters"

[node name="LbZone" type="Label" parent="."]
margin_left = 1.0
margin_top = 28.0
margin_right = 75.0
margin_bottom = 42.0
custom_fonts/font = SubResource( 1 )
text = "encounter.json"

[node name="LbNb" type="Label" parent="."]
margin_left = 3.0
margin_top = 44.0
margin_right = 77.0
margin_bottom = 58.0
custom_fonts/font = SubResource( 1 )
text = "Nb tests :"

[node name="LbRate" type="Label" parent="."]
margin_left = 5.0
margin_top = 61.0
margin_right = 79.0
margin_bottom = 75.0
custom_fonts/font = SubResource( 1 )
text = "Rate %   :"

[node name="EdNumbers" type="LineEdit" parent="."]
margin_left = 51.0
margin_top = 41.0
margin_right = 109.0
margin_bottom = 65.0
rect_scale = Vector2( 0.513623, 0.636587 )
focus_next = NodePath("../EdRate")
focus_previous = NodePath("../SelectFile")
text = "100"
placeholder_text = "0"
placeholder_alpha = 0.9

[node name="EdRate" type="LineEdit" parent="."]
margin_left = 51.0
margin_top = 58.0
margin_right = 109.0
margin_bottom = 82.0
rect_scale = Vector2( 0.513623, 0.636587 )
focus_next = NodePath("../CalcSingle")
focus_previous = NodePath("../EdNumbers")
text = "20"
placeholder_text = "0"
placeholder_alpha = 0.9

[node name="LbResults" type="RichTextLabel" parent="."]
margin_left = 87.0
margin_top = 46.0
margin_right = 387.0
margin_bottom = 266.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "results"
text = "results"

[node name="BiomonSprite" parent="." instance=ExtResource( 4 )]
position = Vector2( 129, 105 )

[node name="FileSelector" type="FileDialog" parent="."]
margin_top = 10.0
margin_right = 400.0
margin_bottom = 266.0
rect_scale = Vector2( 0.5, 0.5 )
popup_exclusive = true
window_title = "Load encounter"
mode_overrides_title = false
mode = 0
show_hidden_files = true

[connection signal="file_selected" from="FileSelector" to="." method="_on_FileSelector_file_selected"]
